Fixed move buttons stuck together

--- a/src/app/components/exercises/exercises.component.css
+++ b/src/app/components/exercises/exercises.component.css
@@ -1,5 +1,5 @@
 .updown {
-    margin-left: 3px;
+  margin: 1px;
 }
 
 .loginform {
@@ -8,4 +8,18 @@
 
 .loginform > span > button {
   margin: 5px;
+}
+
+.that-button {
+  margin: 3px;
+}
+
+.inputs {
+  vertical-align: middle;
+}
+
+.add-excercise {
+  margin: 0 auto;
+  display: block;
+  max-width: fit-content;
 }
